--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Angular Demo App",
+  "name": "ContactBook - Angular Demo App",
   "version": "1.0.0",
   "homepage": "https://github.com/mirrobozik/AngularDemo",
   "authors": [
